--- a/fly.toml
+++ b/fly.toml
@@ -16,6 +16,19 @@ primary_region = 'arn'
   min_machines_running = 0
   processes = ['app']
 
+[[services.ports]]
+  handlers = ["http"]
+  port = 80
+  force_https = true
+
+[[services.ports]]
+  handlers = ["tls","http"]
+  port = 8080
+
+[[services.ports]]
+  handlers = ["tls", "http"]
+  port = 443
+    
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
