--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "generate:seo": "node ./scripts/generate-seo-assets.mjs",
-    "build": "npm run generate:seo && vite build && vite build --ssr src/entry-server.tsx --outDir dist/server --emptyOutDir false && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "npm run generate:seo && vite build && vite build --config vite.server.config.ts && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
